# pseudoservices-rs

./: .gitignore  Blogs.toml  Cargo.toml  README.md  build.rs
.codesandbox/: tasks.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
backend/: Cargo.toml  build.rs
backend/src/: main.rs
blogs/: assembler.md  blogs.json  emulator.md  test.md
blogs/md/: test.md
css/: base.css  blog.css  global.css  icons.css  index.css  nav.css
frontend/: Cargo.toml
frontend/src/: main.rs
host/: highlight.min.js  ros-pine-moon.css
html/: index.html
src/: blogs.json  main.rs
static/: robots.txt  sitemap.txt
templates/: base.tera  blog.tera  index.tera
ts/: global.ts  index.ts  tsconfig.json
