[package]
name = "pseudoservices-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
ammonia = "3.3.0"
anyhow = "1.0.75"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
log = "0.4.20"
notify = "6.1.1"
once_cell = "1.18.0"
pulldown-cmark = "0.9.3"
serde = { version = "1.0.189", features = ["derive"] }
tera = "1.19.1"
thiserror = "1.0.49"
tokio = { version="1.33.0", features = ["sync", "fs"] }
toml = "0.8.2"
